Atualizei a tag meta

--- a/web.html
+++ b/web.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="pt-br">
     <head>
+	    
         <meta charset="utf-8">
-        <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 		<!-- Font Awesome -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
@@ -15,7 +15,7 @@
 	    <link rel='stylesheet' type='text/css' href='https://d33wubrfki0l68.cloudfront.net/bundles/80ebefb808c849bc2ae9dc23dbbe442cb8f443eb.css'/>
        
 
-        <title>Página Base BootStrap4</title>
+        <title>Meu perfil</title>
     </head>
     <body>
         <div id="list-item5"></div>
